--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,7 +24,7 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew assembleDebug
+    - name: Print names
+      run: echo "Base (no libraries)\nB  Video View\nC  Virtual Background\nD  Video Filters\nE  Noise Cancellation\nF  Hls Player Stats\nG  Hls Player\nH  Room Kit\nI  Room Kit with noise cancellation and all libraries"
     - name: Print sizes
       run: find . -name "*.apk" -exec ls -alh {} \;
-    - name: Print names
-      run: echo "A: Base (no libraries)\nB: Video View\nC: Virtual Background\nD: Video Filters\nE: Noise Cancellation\nF: Hls Player Stats\nG: Hls Player\nH: Room Kit\nI: Room Kit with noise cancellation and all libraries"
