--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,4 +26,4 @@ jobs:
       run: ./gradlew assembleDebug
     - name: Print sizes
       working-directory: ./app/build/outputs/apk/
-      run: find . -name "*.apk" -exec ls -1h {} \; | sort -g
+      run: find . -name "*.apk" -exec ls -lh {} \; | sort -g
