--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -53,9 +53,12 @@ jobs:
     steps:
 
     - name: Download a single artifact
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: all-apks
+
+    - name: List files
+        run: find .
 
     - name: List file sizes
       shell: bash
