--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,37 +32,5 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew assembleRelease
 
-    - uses: actions/upload-artifact@v4
-      with:
-        name: all-apks
-        path: app/build/outputs/apk/**/release/*.apk
-
-    # - name: Package into one file
-    #   run: find . -name "*.apk" -exec zip -j apks.zip {} +
-
-
-    # - name: Print sizes
-    #   working-directory: ./app/build/outputs/apk/
-    #   run: find . -name '*.apk' | while read line; do; ls -lh "$line" |  awk '{gsub(/\.\/app\/build\/outputs\/apk\//,"",$9);gsub(/.*release\/app-[0-9][0-9]-/,"",$9);gsub(/-release-unsigned\.apk/,"",$9);gsub(/0-without-sdk\/release\/app-0-/,"",$9);print}' | awk '{print $5, $9}' >> $GITHUB_STEP_SUMMARY ; done
-
-
-
-  list-sizes:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-
-    - name: Download a single artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: all-apks
-
     - name: List files
-      run: find .
-
-    - name: List file sizes
-      shell: bash
-      run: |
-        find . -name '*.apk' | while read line; do; ls -lh "$line" |  awk '{gsub(/\.\/app\/build\/outputs\/apk\//,"",$9);gsub(/.*release\/app-[0-9][0-9]-/,"",$9);gsub(/-release-unsigned\.apk/,"",$9);gsub(/0-without-sdk\/release\/app-0-/,"",$9);print}' | awk '{print $5, $9}' ; done
-
-
+      run: find . -name "*.apk" -exec ls -lh {} \;
