--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,8 +32,6 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew assembleRelease
 
-    - name: List files
+    - name: Create Table
       run: |
-        find . -name '*.apk' | while read line; do \
-          ls -lh "$line" |  awk '{gsub(/\.\/app\/build\/outputs\/apk\//,"",$9);gsub(/.*release\/app-[0-9][0-9]-/,"",$9);gsub(/-release-unsigned\.apk/,"",$9);gsub(/0-without-sdk\/release\/app-0-/,"",$9);print}' | awk '{print $5, $9}' >> $GITHUB_STEP_SUMMARY \
-        done \
+        python print_apk_table.py >> $GITHUB_STEP_SUMMARY
