fix keystore location

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,10 +24,10 @@ jobs:
       run: chmod +x gradlew
 
     - name: Decrypt the keystore
-      run: gpg --quiet --batch --yes --decrypt --passphrase='${{ secrets.KEYSTORE_DECRYPT_PASSWORD }}' --output app/sample-key.keystore sample-key.keystore.gpg
+      run: gpg --quiet --batch --yes --decrypt --passphrase='${{ secrets.KEYSTORE_DECRYPT_PASSWORD }}' --output sample-key.keystore sample-key.keystore.gpg
 
     - name: Decrypt the keystore properties
-      run: gpg --quiet --batch --yes --decrypt --passphrase='${{ secrets.KEYSTORE_PROPERTIES_DECRYPT_PASSWORD }}' --output sample-keystore.properties sample-keystore.properties.gpg
+      run: gpg --quiet --batch --yes --decrypt --passphrase='${{ secrets.KEYSTORE_PROPERTIES_DECRYPT_PASSWORD }}' --output app/sample-keystore.properties sample-keystore.properties.gpg
 
     - name: Build with Gradle
       run: ./gradlew assembleRelease
