--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+org.gradle.java.home=/Users/aniket/Applications/Android\ Studio.app/Contents/jbr/Contents/Home
+roomKitVersion=1.2.15
+hmsVersion=2.9.62
