--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,6 +10,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      BRANCH_NAME: "size-docs-for-android-sdk-${{github.ref_name}}"
 
     steps:
     - uses: actions/checkout@v4
@@ -32,15 +34,35 @@ jobs:
     - name: Collect versions from gradle.properties into env
       run: echo "PYTHON_VERSION_ARGS=$(./gradlew -q printPythonScriptArgs)" >> $GITHUB_ENV
 
-    - name: Check Create table
-      run: |
-        ./gradlew -q printPythonScriptArgs >> $GITHUB_ENV
-        ./print_apk_table.py "$PYTHON_VERSION_ARGS" >> $GITHUB_STEP_SUMMARY
-
     - name: Build with Gradle
       run: ./gradlew assembleRelease
 
-    - name: Create Table
+    - name: Create table for github summary
       run: |
         ./gradlew -q printPythonScriptArgs >> $GITHUB_ENV
-        ./print_apk_table.py "$PYTHON_VERSION_ARGS" >> $GITHUB_STEP_SUMMARY
+        ./print_apk_table.py >> $GITHUB_STEP_SUMMARY
+
+    - name: Clone Docs
+      run: |
+        git clone "https://${{ secrets.ANDROID_SDK_CLONE_TOKEN }}@github.com/100mslive/100ms-docs.git" .
+
+    - name: Write table to file
+      run: |
+        ./gradlew -q printPythonScriptArgs >> $GITHUB_ENV
+        ./print_apk_table.py 100ms-docs/docs/android/v2/how-to-guides/install-the-sdk/size.mdx "$PYTHON_VERSION_ARGS"
+
+    - name: Commit the docs
+      working-directory: 100ms-docs
+      run: |
+        git config --global user.name "Aniket Kadam"
+        git config --global user.email "aniket.kadam@100ms.live"
+        git checkout -b $BRANCH_NAME
+        git add ./docs/android/v2/how-to-guides/install-the-sdk/size.mdx
+        git commit -m "Adding size docs for versions $PYTHON_VERSION_ARGS"
+
+    - name: Push up the docs branch
+      run: git push --set-upstream origin $BRANCH_NAME
+
+    - name: Open a PR
+      run: |
+        curl -m 120 -XPOST -H 'accept: application/vnd.github+json' -H "Authorization: Bearer ${{ secrets.ANDROID_SDK_CLONE_TOKEN }}" -H 'X-GitHub-Api-Version: 2022-11-28' -d '{"title":"Android API reference docs PR","body":"api reference docs update", "base":"qa","head":"'$BRANCH_NAME'"}' 'https://api.github.com/repos/100mslive/100ms-docs/pulls'
