--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -59,8 +59,10 @@ jobs:
         git commit -m "Adding size docs for versions $(./gradlew -q printPythonScriptArgs)"
 
     - name: Push up the docs branch
+      working-directory: 100ms-docs
       run: git push --set-upstream origin $BRANCH_NAME
 
     - name: Open a PR
+      working-directory: 100ms-docs
       run: |
         curl -m 120 -XPOST -H 'accept: application/vnd.github+json' -H "Authorization: Bearer ${{ secrets.ANDROID_SDK_CLONE_TOKEN }}" -H 'X-GitHub-Api-Version: 2022-11-28' -d '{"title":"Android API reference docs PR","body":"api reference docs update", "base":"qa","head":"'$BRANCH_NAME'"}' 'https://api.github.com/repos/100mslive/100ms-docs/pulls'
